# LAB_Compilers

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
MINI-Lang/: .gitignore  README.md
MINI-Lang/docs/: api.txt
MINI-Lang/include/: error.h  lexer.h  parser.h
MINI-Lang/scripts/: project.bat
MINI-Lang/src/: common.c  common.h
MINI-Lang/src/error/: CMakeLists.txt  common.c
MINI-Lang/src/lexer/: CMakeLists.txt  lexer.c
MINI-Lang/test/: LabTest.c
MINI-Lang/test/cases/: test2.mini
cmake/: CompilerFlags.cmake  mingw-toolchain.cmake
docs/: api.txt  grammar.txt
include/: core.h  error.h  lexer.h  minicomp.h  parser.h  sym.h  symbol.h  tok.def  tok.h  tokens.h  windll.h
scripts/: build_and_run.bat  project.bat
src/: CMakeLists.txt  common.c  common.h  tok.c
src/error/: CMakeLists.txt  common.c  error.c
src/lexer/: CMakeLists.txt  lexer.c
src/parser/: CMakeLists.txt  parser.c  recursive-descent.c
src/sym/: CMakeLists.txt  common.c  sym.c
src/tok/: CMakeLists.txt  common.c  tok.c
test/: LabTest.c
test/cases/: test1.mini
